# qlp-proto-bindings

./: .gitignore  CMakeLists.txt  Makefile  comm.proto  go.mod  test.proto
test/cpp/: test.pb.cc  test.pb.h
test/go/: test.pb.go
test/go/test/: state.pb.go
